2004-11-02  Mark Mitchell  <mark@codesourcery.com>

	PR c++/18124
	* g++.dg/template/crash25.C: New test.

	PR c++/18155
	* g++.dg/template/typedef2.C: New test.
	* g++.dg/parse/crash13.C: Adjust error markers.

	PR c++/18177
	* g++.dg/conversion/const3.C: New test.
	
2004-11-03  Tobias Schlueter  <tobias.schlueter@physik.uni-muenchen.de>

	PR fortran/17535
	PR fortran/17583
	PR fortran/17713
	* gfortran.dg/generic_[123].f90: New testcases.

2004-11-02  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* gcc.dg/uninit-C.c: Remove special-casing for SPARC.
	* gcc.dg/uninit-H.c: Define to "sp" on SPARC.

2004-11-02  Andrew Pinski  <pinskia@physics.uc.edu>

	PR tree-opt/16808
	* gcc.c-torture/compile/pr16808.c: New test.

2004-11-02  Nathan Sidwell  <nathan@codesourcery.com>

	PR rtl-optimization/17104
	* gcc.dg/ppc-bitfield1.c: New.

2004-11-01  Richard Sandiford  <rsandifo@redhat.com>

	* gcc.dg/uninit-H.c (ASM): Define to "$sp" on MIPS targets.

2004-11-01  Richard Sandiford  <rsandifo@redhat.com>

	* g++.dg/abi/mangle6.C: Run for all MIPS targets.  Provide dummy
	strings for 32-bit code.

2004-11-01  Joseph S. Myers  <joseph@codesourcery.com>

	PR c/18239
	* gcc.dg/parm-impl-decl-1.c, gcc.dg/parm-impl-decl-2.c: New tests.

2004-11-01  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/18064
	* g++.old-deja/g++.mike/p811.C: Avoid covariant extension.

2004-10-31  Mark Mitchell  <mark@codesourcery.com>

	PR c++/15172
	* g++.dg/init/aggr2.C: New test.

2004-10-30  Ziemowit Laski  <zlaski@apple.com>

	* objc.dg/local-decl-1.m: New test.

2004-10-30  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* gcc.dg/20040910-1.c: Adjust regex.

2004-10-30  Roger Sayle  <roger@eyesopen.com>

	PR rtl-optimization/18084
	* g++.dg/opt/pr18084-1.C: New testcase.

2004-10-30  Matt Austern  <austern@apple.com>

	PR c++/17542
	* g++.dg/ext/attrib18.C: New test.
	
2004-10-30  Roger Sayle  <roger@eyesopen.com>

	PR middle-end/18096
	* gcc.dg/pr18096-1.c: New test case.
