@@ -1,3 +1,8 @@
+2004-11-03  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.c-torture/execute/stdarg-2.c (foo): Split multiple
+	invocations of va_arg.
+
 2004-11-02  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/18124
